--- a/ComeX.WPF/UserControls/MessageUserControl.xaml
+++ b/ComeX.WPF/UserControls/MessageUserControl.xaml
@@ -5,11 +5,16 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ComeX.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="100" d:DesignWidth="200"
              DataContext="{Binding RelativeSource={RelativeSource Self}}"
              x:Name="MessageUC">
     <UserControl.Resources>
-        <local:MinusAnotherValueConverter x:Key="MinusAnotherValueConverter" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <local:MinusAnotherValueConverter x:Key="MinusAnotherValueConverter" />
+        </ResourceDictionary>
     </UserControl.Resources>
     <Grid Grid.Row="0" x:Name="Message">
         <Grid.Resources>
@@ -17,11 +22,11 @@
                 <Setter Property="Grid.Column" Value="1"/>
                 <Setter Property="Grid.Row" Value="1"/>
                 <Setter Property="TextWrapping" Value="Wrap"/>
-                <Setter Property="Foreground" Value="#D7E3EA"/>
+                <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
             </Style>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Name="MessageAvatarCol" Width="30"></ColumnDefinition>
+            <ColumnDefinition Name="MessageAvatarCol" Width="40"></ColumnDefinition>
             <ColumnDefinition>
                 <ColumnDefinition.Width>
                     <GridLength>*</GridLength>
@@ -29,19 +34,19 @@
             </ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"></RowDefinition>
+            <RowDefinition Height="40"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
         </Grid.RowDefinitions>
-        <Button x:Name="MessageAvatar" Grid.Column="0" Grid.Row="0"/>
+        <Button x:Name="MessageAvatar" Grid.Column="0" Grid.Row="0" Style="{StaticResource RoundButtonStyle}"/>
         <WrapPanel x:Name="MessageNickDateWrapP" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
             <WrapPanel.Resources>
                 <Style TargetType="{x:Type TextBlock}">
                     <Setter Property="Margin" Value="5,5,5,5" />
                 </Style>
             </WrapPanel.Resources>
-            <TextBlock x:Name="AuthorText" Text="{Binding Author}" FontSize="16" Foreground="#D7E3EA"/>
-            <TextBlock x:Name="DateText" Text="{Binding Date}" FontSize="12"  Foreground="#D7E3EA"/>
+            <TextBlock x:Name="AuthorText" Text="{Binding Author}" FontSize="16" Foreground="{StaticResource LightBlue1}"/>
+            <TextBlock x:Name="DateText" Text="{Binding Date}" FontSize="12"  Foreground="{StaticResource LightBlue1}"/>
         </WrapPanel>
         <TextBlock x:Name="ContentText" Text="{Binding Content}"/>
     </Grid>
