--- a/ComeX.WPF/UserControls/SurveyUserControl.xaml
+++ b/ComeX.WPF/UserControls/SurveyUserControl.xaml
@@ -1,22 +1,19 @@
-﻿<UserControl x:Class="ComeX.WPF.MessageUserControl"
+﻿<UserControl x:Class="ComeX.WPF.UserControls.SurveyUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ComeX.WPF"
+             xmlns:local="clr-namespace:ComeX.WPF.UserControls"
              mc:Ignorable="d" 
-             d:DesignHeight="100" d:DesignWidth="200"
-             DataContext="{Binding RelativeSource={RelativeSource Self}}"
-             x:Name="MessageUC">
+             d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <local:MinusAnotherValueConverter x:Key="MinusAnotherValueConverter" />
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid Grid.Row="0" x:Name="Message">
+    <Grid>
         <Grid.Resources>
             <Style TargetType="{x:Type TextBlock}">
                 <Setter Property="Grid.Column" Value="1"/>
@@ -26,7 +23,7 @@
             </Style>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Name="MessageAvatarCol" Width="40"></ColumnDefinition>
+            <ColumnDefinition Name="AvatarCol" Width="40"></ColumnDefinition>
             <ColumnDefinition>
                 <ColumnDefinition.Width>
                     <GridLength>*</GridLength>
@@ -36,8 +33,7 @@
         <Grid.RowDefinitions>
             <RowDefinition x:Name="AuthorDateRow" Height="40"></RowDefinition>
             <RowDefinition x:Name="ContentRow"></RowDefinition>
-            <RowDefinition x:Name="FileRow"></RowDefinition>
-            <RowDefinition x:Name="EmojisRow" Height="30"></RowDefinition>
+            <RowDefinition x:Name="AnswersRow"></RowDefinition>
         </Grid.RowDefinitions>
         <Button x:Name="MessageAvatar" Grid.Column="0" Grid.Row="0" Style="{StaticResource RoundButtonStyle}"/>
         <WrapPanel x:Name="MessageNickDateWrapP" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center">
@@ -50,5 +46,11 @@
             <TextBlock x:Name="DateText" Text="{Binding Date}" FontSize="12"  Foreground="{StaticResource LightBlue1}"/>
         </WrapPanel>
         <TextBlock x:Name="ContentText" Text="{Binding Content}"/>
+        <WrapPanel x:Name="AnswersWrapP" Grid.Column="1" Grid.Row="2"
+                   Orientation="Vertical"
+                   VerticalAlignment="Top"
+                   HorizontalAlignment="Left">
+
+        </WrapPanel>
     </Grid>
 </UserControl>
