--- a/ComeX.WPF/Styles.xaml
+++ b/ComeX.WPF/Styles.xaml
@@ -90,4 +90,12 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style x:Key="DefaultBorderStyle" TargetType="{x:Type Border}">
+        <Setter Property="BorderBrush" Value="{StaticResource DarkBlue2}" />
+        <Setter Property="BorderThickness" Value="4" />
+        <Setter Property="CornerRadius" Value="16" />
+    </Style>
+    <Style x:Key="WindowBorderStyle" TargetType="{x:Type Border}" BasedOn="{StaticResource DefaultBorderStyle}">
+        <Setter Property="Background" Value="{StaticResource DarkBlue3}" />
+    </Style> 
 </ResourceDictionary>
