--- a/ComeX.WPF/UserControls/CreateSurveyAnswerUserControl.xaml
+++ b/ComeX.WPF/UserControls/CreateSurveyAnswerUserControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ComeX.WPF"
              mc:Ignorable="d" 
-             d:DesignHeight="33" d:DesignWidth="350">
+             d:DesignHeight="37" d:DesignWidth="380">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -17,7 +17,7 @@
           Height="33"
           Margin="2,2,2,2">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
+            <ColumnDefinition Width="335"/>
             <ColumnDefinition Width="30" />
         </Grid.ColumnDefinitions>
         <Rectangle Grid.Row="0" Fill="{StaticResource DarkBlue2}"
@@ -29,7 +29,7 @@
                                HorizontalAlignment="Left"
                                VerticalAlignment="Top">
             <Rectangle.Fill>
-                <ImageBrush ImageSource="/UserControls/answerPlaceholder.jpg"/>
+                <ImageBrush ImageSource="../Resources/Images/Placeholders/answerPlaceholder.jpg"/>
             </Rectangle.Fill>
         </Rectangle>
         <TextBox x:Name="AnswerTextBox" Grid.Column="0" Style="{StaticResource DefaultTextBoxStyle}"
